--- a/frontend/src/pages/funcao/style.module.scss
+++ b/frontend/src/pages/funcao/style.module.scss
@@ -168,3 +168,45 @@
   color: #333;
   font-weight: bold;
 }
+
+.fullscreenSpinner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5); /* Fundo escuro semi-transparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgba(255, 255, 255, 0.3);
+  border-top-color: white;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.preformattedText {
+  white-space: pre-wrap; /* Permite que o texto quebre automaticamente */
+  word-wrap: break-word; /* Garante a quebra de palavras longas */
+  overflow-wrap: break-word;
+  max-width: 100%; /* Impede que o conteúdo ultrapasse a largura do contêiner */
+  overflow-x: auto; /* Adiciona rolagem horizontal caso necessário */
+  background: #f4f4f4; /* Apenas para melhor visualização */
+  padding: 10px;
+  border-radius: 5px;
+}
