--- a/frontend/src/pages/funcao/style.module.scss
+++ b/frontend/src/pages/funcao/style.module.scss
@@ -20,7 +20,7 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
-  color: #6734ff;
+  color: #000;
   text-align: center;
   font-family: "DM Sans", sans-serif;
 }
@@ -39,7 +39,7 @@
 
 .select {
   width: 200px;
-  height: 40px; /* Reduzido de 50px para 40px */
+  height: 40px; 
   padding: 8px;
   border: 1px solid #999;
   border-radius: 8px;
@@ -91,7 +91,7 @@
   width: 300px;
   margin-top: 20px;
   padding: 12px;
-  background: linear-gradient(135deg, #6734ff 0%, #4b00e0 100%);
+  background: #8f969d;
   color: white;
   font-weight: bold;
   border: none;
@@ -102,11 +102,15 @@
   transition: all 0.3s ease-in-out;
 }
 
+.buttonAnalise:hover {
+  background-color: rgba(143, 150, 157, 0.8);
+}
+
 .buttonPrompt {
   width: 300px;
   margin-top: 20px;
   padding: 12px;
-  background: linear-gradient(135deg, #6734ff 0%, #4b00e0 100%);
+  background: #8f969d;
   color: white;
   font-weight: bold;
   border: none;
@@ -115,6 +119,10 @@
   font-size: 15px;
   text-transform: uppercase;
   transition: all 0.3s ease-in-out;
+}
+
+.buttonPrompt:hover {
+  background-color: rgba(143, 150, 157, 0.8);
 }
 
 .button:hover {
@@ -143,7 +151,7 @@
 }
 
 .uploadButton {
-  background-color: #6734ff;
+  background-color: #8f969d;
   color: white;
   font-weight: bold;
   padding: 12px 18px;
@@ -160,7 +168,7 @@
 }
 
 .uploadButton:hover {
-  background-color: #4b00e0;
+  background-color: rgba(143, 150, 157, 0.8);
 }
 
 .fileName {
@@ -201,12 +209,58 @@
 }
 
 .preformattedText {
-  white-space: pre-wrap; /* Permite que o texto quebre automaticamente */
-  word-wrap: break-word; /* Garante a quebra de palavras longas */
+  white-space: pre-wrap; 
+  word-wrap: break-word; 
   overflow-wrap: break-word;
-  max-width: 100%; /* Impede que o conteúdo ultrapasse a largura do contêiner */
-  overflow-x: auto; /* Adiciona rolagem horizontal caso necessário */
-  background: #f4f4f4; /* Apenas para melhor visualização */
+  max-width: 100%;
+  overflow-x: auto; 
+  background: #f4f4f4; 
   padding: 10px;
   border-radius: 5px;
+}
+
+.tableContainer {
+  overflow-x: auto;
+  margin-top: 20px;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: "DM Sans", sans-serif;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.table th, .table td {
+  padding: 12px 15px;
+  text-align: left;
+}
+
+.table thead {
+  background-color: #8f969d;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.table tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.table tbody tr:hover {
+  background-color: rgba(100, 110, 120, 0.1);
+}
+
+.table tbody td {
+  border-bottom: 1px solid #ddd;
+}
+
+.totalPoints {
+  font-size: 18px;
+  font-weight: bold;
+  color: #000;
+  margin-top: 15px;
+  text-align: right;
 }
