--- a/frontend/src/pages/planotestes/style.module.scss
+++ b/frontend/src/pages/planotestes/style.module.scss
@@ -20,7 +20,7 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
-  color: #6734ff;
+  color: #000;;
   text-align: center;
   font-family: "DM Sans", sans-serif;
 }
@@ -39,7 +39,7 @@
 
 .select {
   width: 200px;
-  height: 40px; /* Reduzido de 50px para 40px */
+  height: 40px; 
   padding: 8px;
   border: 1px solid #999;
   border-radius: 8px;
@@ -91,7 +91,7 @@
   width: 300px;
   margin-top: 20px;
   padding: 12px;
-  background: linear-gradient(135deg, #6734ff 0%, #4b00e0 100%);
+  background: #8f969d;
   color: white;
   font-weight: bold;
   border: none;
@@ -102,11 +102,16 @@
   transition: all 0.3s ease-in-out;
 }
 
+.buttonAnalise:hover {
+  background-color: rgba(143, 150, 157, 0.8);
+}
+
+
 .buttonPrompt {
   width: 300px;
   margin-top: 20px;
   padding: 12px;
-  background: linear-gradient(135deg, #6734ff 0%, #4b00e0 100%);
+  background: #8f969d;
   color: white;
   font-weight: bold;
   border: none;
@@ -116,6 +121,11 @@
   text-transform: uppercase;
   transition: all 0.3s ease-in-out;
 }
+
+.buttonPrompt:hover {
+  background-color: rgba(143, 150, 157, 0.8);
+}
+
 
 .button:hover {
   background: linear-gradient(135deg, #4b00e0 0%, #6734ff 100%);
@@ -143,7 +153,7 @@
 }
 
 .uploadButton {
-  background-color: #6734ff;
+  background-color: #8f969d;
   color: white;
   font-weight: bold;
   padding: 12px 18px;
@@ -160,9 +170,8 @@
 }
 
 .uploadButton:hover {
-  background-color: #4b00e0;
+  background-color: rgba(143, 150, 157, 0.8);
 }
-
 .fileName {
   font-size: 14px;
   color: #333;
